# YAUS

./: LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
shortener/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
shortener/migrations/: 0001_initial.py  0002_alter_longshorturl_short.py
shortener/templatetags/: user_filters.py
static/: script.js
templates/: base.html  index.html  login.html  paginator.html  profile.html
templates/includes/: header.html  single_form.html
users/: models.py  urls.py
users/migrations/: 0001_initial.py
yaus/: asgi.py  settings.py  urls.py  wsgi.py
