[tool.poetry]
name = "yaus"
version = "0.1.0"
description = ""
authors = ["Vitaly Chernyshov <81708357+vitaliy-chernyshov@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "~3.2"
django-widget-tweaks = "=1.4.12"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-broken-line = "^0.4.0"
pep8-naming = "^0.12.1"
flake8-return = "^1.1.3"
flake8-black = "^0.3.2"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
